--- a/master.css
+++ b/master.css
@@ -85,7 +85,8 @@ header nav .nav-responsive {
   display: none;
   background-color: #000000;
   padding: 20px 10px 15px;
-  border-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
   position: fixed;
   top: -15px;
   right: 0;
