--- a/master.css
+++ b/master.css
@@ -10,20 +10,19 @@ a {
   color: #53597b;
 }
 
-.home-page .title-content .explore:hover{
+.home-page .title-content .explore:hover {
   background-color: #3498db;
 }
-
 
 button:active {
   transform: scale(0.98);
 }
 
-@keyframes navbar{
-  from{
+@keyframes navbar {
+  from {
     left: 200px;
   }
-  to{
+  to {
     left: 0;
   }
 }
@@ -65,7 +64,7 @@ header nav .btn-register {
   padding: 10px 30px;
   font-size: 1rem;
   font-weight: 400;
-  background: #2196F3;
+  background: #2196f3;
   color: white;
   border-radius: 20px;
   margin: auto 0;
@@ -74,11 +73,10 @@ header nav .btn-register {
   font-weight: 600;
   box-shadow: 0px 10px 20px -10px #1376c5;
   transition: all 0.3s ease-in;
-
 }
 header nav .btn-register:hover {
   color: white;
-  background-color:#3498db;
+  background-color: #3498db;
   transition: all 0.3s ease-in;
 }
 header nav .nav-responsive {
@@ -94,12 +92,11 @@ header nav .nav-responsive {
   opacity: 1;
 }
 
-header nav .nav-responsive img{
+header nav .nav-responsive img {
   width: 30px;
   height: 30px;
   object-fit: contain;
 }
-
 
 nav ul li a:hover {
   padding: 15px 30px;
@@ -110,25 +107,24 @@ nav ul li a:hover {
 }
 
 @media only screen and (max-width: 950px) {
-
-  header{
+  header {
     padding: 5%;
   }
- header nav {
+  header nav {
     justify-content: space-between;
     position: relative;
   }
- header nav .btn-register {
+  header nav .btn-register {
     display: none;
   }
- header nav .nav-items {
+  header nav .nav-items {
     margin: 0 20px;
   }
- header nav .nav-buttons {
+  header nav .nav-buttons {
     margin: 0 20px;
     min-width: 0;
   }
-  header nav .btn-responsive{
+  header nav .btn-responsive {
     padding: 10px 30px;
     font-size: 1rem;
     font-weight: 600;
@@ -141,7 +137,7 @@ nav ul li a:hover {
     font-weight: 600;
   }
 
- header nav ul {
+  header nav ul {
     display: none;
   }
   header nav ul li {
@@ -149,7 +145,7 @@ nav ul li a:hover {
     color: white;
   }
 
-  header nav ul li a{
+  header nav ul li a {
     color: #ffff;
     font-size: 1.5rem;
   }
@@ -179,12 +175,10 @@ nav ul li a:hover {
     display: block;
     cursor: pointer;
     margin: 0 20px;
-
   }
 
   header nav .collapse-div.remove {
     display: none;
-    
   }
 
   header nav .close-div {
@@ -195,7 +189,6 @@ nav ul li a:hover {
   header nav .close-div.active {
     display: block;
     cursor: pointer;
-    
   }
 
   header nav .responsive + .collapse-div {
@@ -208,145 +201,145 @@ nav ul li a:hover {
   }
 }
 
-
-#news-slider{
-    margin-top: 80px;
-    
+#news-slider {
+  margin-top: 80px;
 }
-.post-slide{
-    background: #fff;
-    margin: 20px 15px 20px;
-    border-radius: 15px;
-    padding-top: 1px;
-    box-shadow: 0px 14px 22px -9px #bbcbd8;
+.post-slide {
+  background: #fff;
+  margin: 20px 15px 20px;
+  border-radius: 15px;
+  padding-top: 1px;
+  box-shadow: 0px 14px 22px -9px #bbcbd8;
 }
-.post-slide .post-img{
-    position: relative;
-    overflow: hidden;
-    border-radius: 10px;
-    margin: -12px 0px 8px 0px;
-    /* margin-left: -10px; */
+.post-slide .post-img {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  margin: -12px 0px 8px 0px;
+  /* margin-left: -10px; */
 }
-.post-slide .post-img img{
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    transform: scale(1,1);
-    transition:transform 0.2s linear;
+.post-slide .post-img img {
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
+  transform: scale(1, 1);
+  transition: transform 0.2s linear;
 }
-.post-slide:hover .post-img img{
-    transform: scale(1.1,1.1);
+.post-slide:hover .post-img img {
+  transform: scale(1.1, 1.1);
 }
-.post-slide .over-layer{
-    width:100%;
-    height:100%;
-    position: absolute;
-    top:0;
-    left:0;
-    opacity:0;
-    background: linear-gradient(-45deg, rgba(6,190,244,0.75) 0%, rgba(45,112,253,0.6) 100%);
-    transition:all 0.50s linear;
+.post-slide .over-layer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.4px);
+  -webkit-backdrop-filter: blur(2.4px);
+  border: 1px solid rgba(255, 255, 255, 0.03);
+  transition: all 0.5s linear;
 }
-.post-slide:hover .over-layer{
-    opacity:1;
-    text-decoration:none;
+.post-slide:hover .over-layer {
+  opacity: 1;
+  text-decoration: none;
 }
-.post-slide .over-layer i{
-    position: relative;
-    top:45%;
-    text-align:center;
-    display: block;
-    color:#fff;
-    font-size:25px;
+.post-slide .over-layer i {
+  position: relative;
+  top: 45%;
+  text-align: center;
+  display: block;
+  color: #000000;
+  font-size: 25px;
 }
-.post-slide .post-content{
-    background:#fff;
-    padding: 2px 20px 50px;
-    border-radius: 15px;
+.post-slide .post-content {
+  background: #fff;
+  padding: 2px 20px 50px;
+  border-radius: 15px;
 }
-.post-slide .post-title a{
-    font-size:15px;
-    font-weight:bold;
-    color:#333;
-    display: inline-block;
-    text-transform:uppercase;
-    transition: all 0.3s ease 0s;
+.post-slide .post-title a {
+  font-size: 15px;
+  font-weight: bold;
+  color: #333;
+  display: inline-block;
+  text-transform: uppercase;
+  transition: all 0.3s ease 0s;
 }
-.post-slide .post-title a:hover{
-    text-decoration: none;
-    color:#3498db;
+.post-slide .post-title a:hover {
+  text-decoration: none;
+  color: #3498db;
 }
-.post-slide .post-description{
-    line-height:24px;
-    color:#808080;
-    margin-bottom:25px;
+.post-slide .post-description {
+  line-height: 24px;
+  color: #808080;
+  margin-bottom: 25px;
 }
-.post-slide .post-date{
-    color:#a9a9a9;
-    font-size: 14px;
+.post-slide .post-date {
+  color: #a9a9a9;
+  font-size: 14px;
 }
-.post-slide .post-date i{
-    font-size:20px;
-    margin-right:8px;
-    color: #CFDACE;
+.post-slide .post-date i {
+  font-size: 20px;
+  margin-right: 8px;
+  color: #cfdace;
 }
-.post-slide .read-more{
-    padding: 7px 20px;
-    float: right;
-    font-size: 12px;
-    background: #2196F3;
-    color: #ffffff;
-    box-shadow: 0px 10px 20px -10px #1376c5;
-    border-radius: 25px;
-    text-transform: uppercase;
-    transition: all 0.3s ease-in;
-
+.post-slide .read-more {
+  padding: 7px 20px;
+  float: right;
+  font-size: 12px;
+  background: #2196f3;
+  color: #ffffff;
+  box-shadow: 0px 10px 20px -10px #1376c5;
+  border-radius: 25px;
+  text-transform: uppercase;
+  transition: all 0.3s ease-in;
 }
-.post-slide .read-more:hover{
-    background: #3498db;
-    text-decoration:none;
-    color:#fff;
-    transition: all 0.3s ease-in;
-
+.post-slide .read-more:hover {
+  background: #3498db;
+  text-decoration: none;
+  color: #fff;
+  transition: all 0.3s ease-in;
 }
-.owl-controls .owl-buttons{
-    text-align:center;
-    margin-top:20px;
+.owl-controls .owl-buttons {
+  text-align: center;
+  margin-top: 20px;
 }
-.owl-controls .owl-buttons .owl-prev{
-    background: #fff;
-    position: absolute;
-    top:-13%;
-    left:15px;
-    padding: 0 18px 0 15px;
-    border-radius: 50px;
-    box-shadow: 3px 14px 25px -10px #92b4d0;
-    transition: background 0.5s ease 0s;
+.owl-controls .owl-buttons .owl-prev {
+  background: #fff;
+  position: absolute;
+  top: -13%;
+  left: 15px;
+  padding: 0 18px 0 15px;
+  border-radius: 50px;
+  box-shadow: 3px 14px 25px -10px #92b4d0;
+  transition: background 0.5s ease 0s;
 }
-.owl-controls .owl-buttons .owl-next{
-    background: #fff;
-    position: absolute;
-    top:-13%;
-    right: 15px;
-    padding: 0 15px 0 18px;
-    border-radius: 50px;
-    box-shadow: -3px 14px 25px -10px #92b4d0;
-    transition: background 0.5s ease 0s;
+.owl-controls .owl-buttons .owl-next {
+  background: #fff;
+  position: absolute;
+  top: -13%;
+  right: 15px;
+  padding: 0 15px 0 18px;
+  border-radius: 50px;
+  box-shadow: -3px 14px 25px -10px #92b4d0;
+  transition: background 0.5s ease 0s;
 }
 .owl-controls .owl-buttons .owl-prev:after,
-.owl-controls .owl-buttons .owl-next:after{
-    content:"\f104";
-    font-family: FontAwesome;
-    color: #333;
-    font-size:30px;
+.owl-controls .owl-buttons .owl-next:after {
+  content: "\f104";
+  font-family: FontAwesome;
+  color: #333;
+  font-size: 30px;
 }
-.owl-controls .owl-buttons .owl-next:after{
-    content:"\f105";
+.owl-controls .owl-buttons .owl-next:after {
+  content: "\f105";
 }
-@media only screen and (max-width:1280px) {
-    .post-slide .post-content{
-        padding: 0px 15px 50px 15px;
-    }
+@media only screen and (max-width: 1280px) {
+  .post-slide .post-content {
+    padding: 0px 15px 50px 15px;
+  }
 }
 
 footer {
@@ -358,10 +351,9 @@ footer {
   background-color: hsl(233deg, 26%, 24%);
   color: white;
 }
-footer a{
+footer a {
   color: white;
   transition: all 0.3s ease-in;
-
 }
 footer .box1 {
   width: 40%;
@@ -369,21 +361,21 @@ footer .box1 {
 footer .box1 img {
   width: 90px;
 }
-.naac-logo{
+.naac-logo {
   width: 80px !important;
 }
 
-.bg-img{
+.bg-img {
   display: inline-block;
   background-color: white;
   width: 160px;
   object-fit: contain;
   margin-left: 10px;
   border-radius: 5px;
-  box-shadow: 1px 2px 2px rgba(0,0,0,0.5);
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-.bg-img img{
+.bg-img img {
   width: 100% !important;
   margin-top: 5px;
 }
@@ -391,10 +383,9 @@ footer .box1 .content {
   margin-top: 40px;
 }
 
-footer a:hover{
- color: #3498db;
- transition: all 0.3s ease-in;
-
+footer a:hover {
+  color: #3498db;
+  transition: all 0.3s ease-in;
 }
 
 footer .box1 .content ul {
@@ -406,7 +397,7 @@ footer .box1 .content ul li {
   color: white;
   list-style: none;
 }
-footer .box1 .content ul li:before{
+footer .box1 .content ul li:before {
   content: url("Home/images/icon-location.svg");
   position: absolute;
   left: 0;
@@ -443,14 +434,11 @@ footer .box3 .links {
 footer .box3 .links a {
   color: white;
   transition: all 0.3s ease-in;
-
 }
 
-footer .box3 .links a:hover{
+footer .box3 .links a:hover {
   color: #3498db;
   transition: all 0.3s ease-in;
-
-
 }
 footer .box4 {
   margin-top: 80px;
@@ -465,49 +453,45 @@ footer .box4 .icon {
 }
 footer .box4 .icon i {
   font-size: 1.5rem;
-}/*# sourceMappingURL=home.css.map */
+} /*# sourceMappingURL=home.css.map */
 
-
-@media only screen and (max-width: 900px){
-  footer{
+@media only screen and (max-width: 900px) {
+  footer {
     text-align: center;
-      padding: auto;
-      flex-direction: column;
+    padding: auto;
+    flex-direction: column;
   }
-  footer .box1{
-      margin-top: 50px;
-      width: 100%;
+  footer .box1 {
+    margin-top: 50px;
+    width: 100%;
   }
-  footer .bg-img img{
+  footer .bg-img img {
     width: 100% !important;
     /* margin-top: 15px; */
     vertical-align: middle;
   }
 
-
-   .naac-logo{
+  .naac-logo {
     margin-left: 0;
     margin: 15px auto 0;
+  }
+  footer .box3 {
+    margin: 20px 0;
+    grid-template-columns: auto;
+    grid-gap: 50px;
+    text-align: center;
+  }
 
+  footer .box3 .links {
+    grid-gap: 15px;
+    grid-template-columns: auto;
+    text-align: center;
   }
-  footer .box3{
-      margin: 20px 0;
-      grid-template-columns: auto;
-      grid-gap: 50px;
-      text-align: center;
+  .box3 .links2 {
+    grid-gap: 15px;
   }
-
-  footer .box3 .links{
-      grid-gap: 15px;
-      grid-template-columns: auto;
-      text-align: center;
-
-  }
-  .box3 .links2{
-      grid-gap: 15px;
-  }
-  footer .box4{
-      margin: 10px 0;
-      text-align: center;
+  footer .box4 {
+    margin: 10px 0;
+    text-align: center;
   }
 }
