--- a/Clubs/clubs.scss
+++ b/Clubs/clubs.scss
@@ -428,7 +428,7 @@ $darkBlue: #0273ff;
   }
 }
 
-.achievments-slider {
+.achievements-slider {
   padding: 3% 8%;
   background-color: #eeeeee28;
   @include heading-style();
@@ -512,7 +512,7 @@ $darkBlue: #0273ff;
 }
 
 @media only screen and (max-width: 900px) {
-  .achievments-slider {
+  .achievements-slider {
     .achievment-slider {
       text-align: center;
       .slider-content {
